fix EmptyBlock and EmptyCatchBlock